--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "svelte": "^3.48.0",
     "@astrojs/svelte": "^1.0.2",
-    "astro": "^1.6.15"
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.6.15",
+    "svelte": "^3.48.0",
+    "tailwindcss": "^3.2.4"
   }
 }
