--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.15",
+    "pocketbase": "^0.9.0",
     "svelte": "^3.48.0",
     "tailwindcss": "^3.2.4"
   }
