--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
+    "@hotwired/turbo": "^7.2.4",
     "astro": "^1.6.15",
     "nanostores": "^0.7.1",
     "pocketbase": "^0.9.0",
