--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
-    "@hotwired/turbo": "^7.2.4",
     "astro": "^1.6.15",
+    "flamethrower-router": "^0.0.0-meme.12",
     "nanostores": "^0.7.1",
     "pocketbase": "^0.9.0",
     "svelte": "^3.48.0",
