--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^1.0.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.15",
-    "flamethrower-router": "^0.0.0-meme.12",
-    "nanostores": "^0.7.1",
+    "@hotwired/turbo": "^7.2.4",
+    "astro": "^1.7.2",
     "pocketbase": "^0.9.0",
-    "svelte": "^3.48.0",
-    "tailwindcss": "^3.2.4"
+    "svelte": "^3.48.0"
   }
 }
