--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "astro build",
     "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
     "astro": "astro",
-    "deno-deploy": "npm run build && deployctl deploy --project=<MY-DENO-PROJECT> --no-static --include=./dist ./dist/server/entry.mjs"
+    "deno-deploy": "npm run build && deployctl deploy --project=leonwang --no-static --include=./dist ./dist/server/entry.mjs"
   },
   "dependencies": {
     "@astrojs/deno": "^3.0.0",
